2024-06-18T01:20:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9557325439 # 330
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-18
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 396 786 / 400 790
* notice: next accum: outdated-unq outdated-all / unq all: 397 787 / 401 791
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-04] / [2024-06-17]

2024-06-16T01:25:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9532296702 # 328
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 395 785 / 399 789
* notice: next accum: outdated-unq outdated-all / unq all: 396 786 / 400 790
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-02] / [2024-06-15]

2024-06-15T01:19:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9524340175 # 327
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-15
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 394 784 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 395 785 / 399 789
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-01] / [2024-06-14]

2024-06-14T01:19:33Z: