@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-18T01:20:20Z",
-  "count_outdated" : 787,
-  "uniques_outdated" : 397,
-  "count" : 791,
-  "uniques" : 401,
+  "timestamp" : "2024-06-19T01:20:29Z",
+  "count_outdated" : 788,
+  "uniques_outdated" : 398,
+  "count" : 792,
+  "uniques" : 402,
   "clones" : [
-    {
-      "timestamp": "2024-06-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-14T00:00:00Z",
       "count": 1,
@@ -34,6 +25,15 @@
     },
     {
       "timestamp": "2024-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
