@@ -1,3 +1,12 @@
+2024-06-19T01:20:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9574576647 # 331
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-19
+* notice: last 14d: unq all: 1 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 787 / 401 791
+* notice: next accum: outdated-unq outdated-all / unq all: 398 788 / 402 792
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-06-05] / [2024-06-18]
+
 2024-06-18T01:20:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9557325439 # 330
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-18
